feature: create skills and insert profile-image and style.css

--- a/index.html
+++ b/index.html
@@ -1,10 +1,54 @@
-<html>
-    <head>
-        <title>
-            "Hello World"
-        </title>
-    </head>
-    <body>
-        <h1>'Hello World'</h1>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Jenivaldo Lisboa CV</title>
+
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <main class="resume-contents">
+        <section class="left-section">
+            <section class="lesft-section-content">
+                <div class="profile">
+                    <img class="profile-image" src="img/profile-image.jpg" alt="Profile image">
+                    <p class="name">Jenivaldo Lisboa</p>
+                    <p class="profession">Professor</p>
+                </div>
+                <div class="contact-info">
+                    <p class="left-title">Contato</p>
+                    <ul>
+                        <li><i class="fa fa-phone"></i>+55 82 9 0000-0000</li>
+                        <li><i class="fa fa-envelope"></i>jenivaldo@yahoo.com</li>
+                        <li><i class="fa fa-globe"></i>quimic0.com.br</li>
+                        <li><i class="fa fa-github"></i>ProfJenivaldo</li>
+                    </ul>
+                </div>
+                <div class="skills">
+                    <br><p class="left-title">Skills</p>
+                    <ul>
+                        <li><p>HTML, CSS, Python, Git & GitHub</p></li>
+                        <li><p>Linux</p></li>
+                        <li><p>Físico-Química, Eletroquímica</p></li>
+                    </ul>
+                </div>
+            </section>
+        </section>
+
+        <section class="right-section">
+            <div class="right-section-contents">
+                <section class="about gap">
+                    <div class="right-title">Sobre Mim</div>
+                    <p class="about-me-contents">
+                        Olá sou o Jenivaldo<br>
+                        <br>Sou professor há mais de 5 anos no mercado e atuo no incentivo à iniciação científica entre jovens estudantes.
+                        <br>Apresento boa capacidade de trabalho em equipe, possuindo já experiência com docência.
+                    </p>
+                </section>
+            </div>
+        </section>
+    </main>
+</body>
 </html>
