insert experience and edit style.css

--- a/index.html
+++ b/index.html
@@ -48,6 +48,31 @@
                     </p>
                 </section>
             </div>
+        <section class="experience gap">
+            <div class="right-title">Experiência</div>
+            <div class="experience-contents">
+                <div class="exp-left">
+                    <p class="exp-company-name">Empresa 01</p>
+                    <p class="exp-time-period">2021-Present</p>
+                </div>
+                <div class="exp-right">
+                    <p class="exp-position">Professor</p>
+                    <p class="exp-desc">
+                        Ensino de Química na Ensino Médio, com desenvolvimento de atividades de iniciação científica e criação de clubes de conhecimento ligados às áreas de ciências, astronomia e robótica.
+                    </p>
+                </div>
+                <div class="exp-left">
+                    <p class="exp-company-name">Empresa 02</p>
+                    <p class="exp-time-period">2017-2021</p>
+                </div>
+                <div class="exp-right">
+                    <p class="exp-position">Engenheiro de Software</p>
+                    <p class="exp-desc">
+                        Descreva aqui as principais atividades.
+                    </p>
+                </div>
+            </div>
+        </section>
         </section>
     </main>
 </body>
