feature: insert education

--- a/index.html
+++ b/index.html
@@ -43,36 +43,81 @@
                     <div class="right-title">Sobre Mim</div>
                     <p class="about-me-contents">
                         Olá sou o Jenivaldo<br>
-                        <br>Sou professor há mais de 5 anos no mercado e atuo no incentivo à iniciação científica entre jovens estudantes.
-                        <br>Apresento boa capacidade de trabalho em equipe, possuindo já experiência com docência.
+                        <br>Sou professor há quase 10 anos, atuando no incentivo à iniciação científica entre jovens estudantes da educação básica.
+                        Possuo uma boa capacidade de trabalho em equipe e pró-atividade, buscando empreender em meu ambiente de trabalho.
                     </p>
                 </section>
             </div>
-        <section class="experience gap">
-            <div class="right-title">Experiência</div>
-            <div class="experience-contents">
-                <div class="exp-left">
-                    <p class="exp-company-name">Empresa 01</p>
-                    <p class="exp-time-period">2021-Present</p>
+            <section class="experience gap">
+                <div class="right-title">Experiência</div>
+                <div class="experience-contents">
+                    <div class="exp-left">
+                        <p class="exp-company-name">Empresa 01</p>
+                        <p class="exp-time-period">2012~Presente</p>
+                    </div>
+                    <div class="exp-right">
+                        <p class="exp-position">Professor</p>
+                        <p class="exp-desc">
+                            Ensino de Química na Ensino Médio, com desenvolvimento de atividades de iniciação científica e criação de clubes de conhecimento ligados às áreas de ciências, astronomia e robótica.
+                        </p>
+                    </div>
+                    <div class="exp-left">
+                        <p class="exp-company-name">Empresa 02</p>
+                        <p class="exp-time-period">2008~2014</p>
+                    </div>
+                    <div class="exp-right">
+                        <p class="exp-position">Agente Administrativo</p>
+                        <p class="exp-desc">
+                            Realização de atividades de arquivamento e conferência de documentos financeiros.
+                        </p>
+                    </div>
                 </div>
-                <div class="exp-right">
-                    <p class="exp-position">Professor</p>
-                    <p class="exp-desc">
-                        Ensino de Química na Ensino Médio, com desenvolvimento de atividades de iniciação científica e criação de clubes de conhecimento ligados às áreas de ciências, astronomia e robótica.
-                    </p>
+            </section>
+            <section class="education gap">
+                <div class="right-title">Formação Acadêmica</div>
+                <div class="education-contents">
+                    <div class="education-left">
+                        <p class="education-school-name">UFAL</p>
+                        <p class="educationp-time-period">2014~2018</p>
+                    </div>
+                    <div class="education-right">
+                        <p class="education-subject">Ciências</p>
+                        <p class="education-desc">
+                            Doutorado em Ciências, com habilitação em Físico-Química (Área de atuação: Eletroquímica Fundamental e Aplicada).
+                        </p>
+                    </div>
+                    <div class="education-left">
+                        <p class="education-school-name">UFAL</p>
+                        <p class="educationp-time-period">2012~2014</p>
+                    </div>
+                    <div class="education-right">
+                        <p class="education-subject">Ciências</p>
+                        <p class="education-desc">
+                            Mestrado em Ciências, com habilitação em Físico-Química (Área de atuação: Eletroquímica Fundamental e Aplicada).
+                        </p>
+                    </div>
+                    <div class="education-left">
+                        <p class="education-school-name">FACEAR</p>
+                        <p class="educationp-time-period">2011~2013</p>
+                    </div>
+                    <div class="education-right">
+                        <p class="education-subject">Ensino de Ciências</p>
+                        <p class="education-desc">
+                            Pós-Graduação Lato Sensu em Ensino de Ciências.
+                        </p>
+                    </div>
+                    <div class="education-left">
+                        <p class="education-school-name">UNEAL</p>
+                        <p class="educationp-time-period">2006~2012</p>
+                    </div>
+                    <div class="education-right">
+                        <p class="education-subject">Química</p>
+                        <p class="education-desc">
+                            Licenciatura Plena em Química.
+                        </p>
+                    </div>
                 </div>
-                <div class="exp-left">
-                    <p class="exp-company-name">Empresa 02</p>
-                    <p class="exp-time-period">2017-2021</p>
-                </div>
-                <div class="exp-right">
-                    <p class="exp-position">Engenheiro de Software</p>
-                    <p class="exp-desc">
-                        Descreva aqui as principais atividades.
-                    </p>
-                </div>
-            </div>
-        </section>
+            </section>
         </section>
     </main>
 </body>
