feature: insert awards and change fonts and colors

--- a/index.html
+++ b/index.html
@@ -118,6 +118,36 @@
                     </div>
                 </div>
             </section>
+            <section class="awards gap">
+                <div class="right-title">Cursos</div>
+                <div class="awards-contents">
+                    <div class="awards-left">
+                        <p class="awards-company-name">SBPC</p>
+                        <p class="awards-time-period">2022</p>
+                    </div>
+                    <div class="awards-right">
+                        <p class="awards-name">
+                            Recursos e Estratégias para o Ensino Online e Ativo da Química
+                        </p>
+                        <p class="awards-desc">
+                            Minicurso acerca de metodologias para o ensino remoto de Química promovido pela
+                            Sociedade Brasileira para o Progresso da Ciência.
+                        </p>
+                    </div>
+                    <div class="awards-left">
+                        <p class="awards-company-name">DIO</p>
+                        <p class="awards-time-period">2021</p>
+                    </div>
+                    <div class="awards-right">
+                        <p class="awards-name">
+                            Introdução à programação com Python
+                        </p>
+                        <p class="awards-desc">
+                            Curso realizado na Digital Innovation One em 2021.
+                        </p>
+                    </div>
+                </div>
+            </section>
         </section>
     </main>
 </body>
